Приводил в порядок код фрагмента детализации.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.developgmail.mitroshin.criminalintent">
 
-    <uses-permission-sdk-23 android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission-sdk-23 android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-                     android:maxSdkVersion="18"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <uses-feature android:name="android.hardware.camera"
                   android:required="false"/>
